--- a/frontend/public/templates/css/selectSeat/style.css
+++ b/frontend/public/templates/css/selectSeat/style.css
@@ -94,11 +94,11 @@ p.copy_rights a:hover{
 /*-- movie ticket --*/
 .front{
     margin: 5px 4px 45px 38px;
-    background-color: #D88A04;
+    background-color: #ff4757;
     color: #fff;
     text-align: center;
     padding: 9px 0;
-    border-radius: 3px;
+    border-radius: 10px;
 	}
 .booking-details {
     float: right;
@@ -135,23 +135,26 @@ div.seatCharts-seat {
 	cursor: pointer;
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
-    border-radius: 3px;
+    border-radius: 10px;
 	}
 div.seatCharts-row {
 	height: 35px;
 	}
 div.seatCharts-seat.available {
-	background-color: #949494;
+	background-color: #dfdfdf;
+	border: 1px solid #a0a0a0;
 	}
 div.seatCharts-seat.focused {
-	background-color: #00B70C;
+	background-color: #02c1ab;
+	transition: 0.5s;
 	border: none;
 	}
 div.seatCharts-seat.selected {
-	background-color: #00B70C;
+	/* background-color: #00B70C; */
+	background: linear-gradient(45deg,#01d2ba,#01af9b);
 	}
 div.seatCharts-seat.unavailable {
-	background-color: #D00000;
+	background-color: #ff4757;
 	cursor: not-allowed;
 	}
 div.seatCharts-container {
@@ -203,7 +206,7 @@ span.seatCharts-legendDescription {
 	max-height: 84px;
 	overflow-y: auto;
 	overflow-x: none;
-	width: 200px;
+	width: 300px;
 	}
 #selected-seats li{
     border: 1px solid #d3d3d3;
@@ -215,7 +218,6 @@ span.seatCharts-legendDescription {
     color: #000;
     font-weight: 600;
     padding: 6px 11px;
-    width: 50%;
 	}
 .scrollbar {
     overflow-y: scroll;
@@ -226,13 +228,16 @@ span.seatCharts-legendDescription {
     line-height: 2.2em;
 	font-weight:normal;
 }
-ul.book-left {
+/* ul.book-left {
     float: left;
     width: 35%;
-}
+} */
 ul.book-right {
-    float: right;
-    width: 63%;
+    float: left;
+    /* width: 63%; */
+}
+ul.book-right .name{
+	font-weight: 1000;
 }
 ul.book-left li {
     font-size: 16px;
@@ -243,7 +248,13 @@ ul.book-left li {
 ul.book-right li {
     font-size: 16px;
     font-weight: 500;
-    color: #000;
+    color: #000000;
+    line-height: 1.9em;
+}
+ul.book-right li span{
+	font-size: 14px;
+    font-weight: 500;
+    color: #787878;
     line-height: 1.9em;
 }
 /*-- agileits --*/
